kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gist-web
  labels:
    app: gist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gist
  template:
    metadata:
      namespace: gist
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: '9090'
        prometheus.io/scrape: 'true'
      labels:
        app: gist
    spec:
      containers:
        - name: gist-server
          image: skadicloud/gist-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 9090
          args:
            - "-Dlogback.configurationFile=logback-production.xml"
          resources:
            requests:
              memory: "350Mi"
              cpu: "0.1"
            limits:
              memory: "2000Mi"
              cpu: "2.0"
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /health
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gist-frontend
spec:
  selector:
    app: gist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
