kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gist-ingress
spec:
  rules:
    - host: gist.skadi.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gist-frontend
                port:
                  number: 80
